--- a/apps/contrast-plugin/src/index.html
+++ b/apps/contrast-plugin/src/index.html
@@ -2,15 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>ContrastPlugin</title>
+    <title>contrast-plugin</title>
     <base href="/" />
-
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <link rel="stylesheet" href="/src/styles.css" />
   </head>
   <body>
     <app-root></app-root>
-    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
